--- a/VRChat/40/1124440.html
+++ b/VRChat/40/1124440.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JN1INUhukAprh6SQhP61jN0YifeRK6BzqpHLDmuFNb8="></script>
+    "qNgmDCn7gYzjLcxMlZbkVOImzz3IOl3m8STjWGt5UHs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MagicaVoxel製：VRChat向け鏡餅の台座","description":"▽ポリゴン数3772\n\n・マギカボクセルで作成したVRChat向け鏡餅の台座です。餅や首を乗せてワールドに飾ったり、アバターに使ったりしてください。\n\n～内容物～\n\n・kagammimochi_dai.fbx\n\n・kagamimochi_dai.png\n\n・kagamimochi_gasiyou.png\n\n～導入方法～\n\n・pngファイル二枚を入れてからfbxファイルを導入してください。","url":"https://booth.pm/ja/items/1124440","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ea13c107-27c9-49a4-82b1-71cbe4afa06a/i/1124440/188397d3-4541-4294-ae2a-2c7b47a10433_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JN1INUhukAprh6SQhP61jN0YifeRK6BzqpHLDmuFNb8="></script>
+    nonce="qNgmDCn7gYzjLcxMlZbkVOImzz3IOl3m8STjWGt5UHs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1124440/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1124440/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
