--- a/VRChat/34/1123734.html
+++ b/VRChat/34/1123734.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MHy5nRdsdn+DbP6yPlXU85egq1KCzdWQkSMJg9i4eF8="></script>
+    "QzrMD4s/cBjJannZDQy/4efSvQguDy2jeeq9z5wb22E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3D】ピコピコハンマー【小物】","description":"動画で使用したピコピコハンマーの3Dモデルです。\n\n◆利用規約\n☑ 商用利用→　可\n☑ 加工・二次配布→　可\n☑ 使用報告・権利表記→　不要\n☑ 内容物の著作権そのものは放棄しておりません\n\n◆ 内容物\n- モデル（ .fbx, .obj ）\n- テクスチャ（ .png ）\n\n\n◆ 製作者：タキビ\nhttps://twitter.com/vtuber_takibi","url":"https://booth.pm/ja/items/1123734","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/27e346b2-c873-492b-a801-301f0dbda05c/i/1123734/3cbe95fa-aa68-4f14-abdb-502b8e08a92c_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MHy5nRdsdn+DbP6yPlXU85egq1KCzdWQkSMJg9i4eF8="></script>
+    nonce="QzrMD4s/cBjJannZDQy/4efSvQguDy2jeeq9z5wb22E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,10 +183,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1123734/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              566
+                              568
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1123734/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              566
+                              568
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
