--- a/VRChat/40/1123540.html
+++ b/VRChat/40/1123540.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gOCsgqY2RPhewMeisB+t0B3/07C04hd9zslE2s2oHJA="></script>
+    "AJWm9O23RYr2EuYtkm18uqgXBpcWDxXT3Gcc4kvWw3k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3D】無料ヒト型素体モデル【素体】","description":"ヒト型の素体モデルです。\nどこかの誰かのお役に立ったら幸いです。\n\n通常版とブースト版の中身は同じものになりますが、\nブースト版を購入していただくと\n『タキビちゃんのおやつがちょっとだけ豪華になる』\nという大変嬉しい特典があります。\n\n◆利用規約\n☑ 商用利用→　可\n☑ 加工→　可\n☑ 二次配布→　素体モデルとしての二次配布は不可\n　　　　　　（キャラクターとして改変されたものは可）\n☑ 使用時の権利表記→　不要\n☑ 内容物の著作権そのものは放棄しておりません\n\n◆ 内容物\n- 3Dモデル（ .fbx, .obj ）\n\n\n◆ 製作者：タキビちゃん\nhttps://twitter.com/vtuber_takibi","url":"https://booth.pm/ja/items/1123540","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/27e346b2-c873-492b-a801-301f0dbda05c/i/1123540/dc8266e0-09fb-4798-99eb-07b5767b025d_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gOCsgqY2RPhewMeisB+t0B3/07C04hd9zslE2s2oHJA="></script>
+    nonce="AJWm9O23RYr2EuYtkm18uqgXBpcWDxXT3Gcc4kvWw3k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1123540/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1123540/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
