--- a/VRChat/76/1121776.html
+++ b/VRChat/76/1121776.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OAFznhasbIgo9nUAdhxUAOoTMMc93CvYiLD4lZbkeqo="></script>
+    "RR5VQ82LRoFwD7/HJaO4+l0lnZmlMEnVDGcTEk/cA6c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スキニング済み３D衣装「空々ブーツ２～布地ロングブーツ～」","description":"●概要\nスキニング済みの３Dモデルデータのロングブーツ。\n縦セタ風やレース風のテクスチャ＆ノーマルマップを同梱！\n\nむた様制作のキッシュちゃんを基準に制作しているのでキッシュちゃんへは調整不要で利用可。\n他アバターへも調整して使用可能です。\n\n\n・3Dデータ形式：FBX\n・ポリゴン合計：1410\n・ベーステクスチャー、ノーマルマップ、PSD付属\n・おまけにキッシュちゃん素体用の下着テクスチャーを同梱。簡易\n・ClothEditor(きせかえ支援ツール)用xmlデータ付き\n\n・改変自由\n・本データ、改変物の無許可の再配布、販売の禁止（要相談）\n・収益化・無償問わず動画・放送への出演可\n・本データ、改変物を再利用不可能な形で組み込んだアプリケーション、ゲームの配布・販売可\n\n詳しくは同梱の利用規約.txtを読んでください。\n\n●使用方法方法\n標準的なスキニング済み３Dデータです。\nhttps://docs.google.com/document/d/1V6ov8JXHneF2amua_TZidM_V-eQ5G9IJYNcGajfUdhA/edit?usp=sharing\n細かなやり方はこちらの解説書を参考にしてください。\n解説物は他のデータですが、基本は作業は共通します。\n\n紫画像のノーマルマップは、Unityに導入したら画像を選択してTexture TypeをNormal mapへ必ず切り替えてください。\n\nメインテクスチャーは\nBoots2.png　影付きの黒。Unlit用。影付きシェーダーでも好みでこっちでも良い。\nBoots2_Noshadow.png　影無しの黒。シェーダーで影をつける用\nBoots2白.png　影付きの白。Unlit用。々\nBoots2白_Noshadow.png　影無しの白。シェーダーで影をつける用\nBoots2_Lace.png　透過式のレースが書き込まれたテクスチャ。Transparent指定必須。\n　　　　　　　　　また、このテクスチャの時に限り両面描画はしないでください。\n\nノーマルマップは\nBoots2_Normal.png　シワだけを表現\nBoots2_Normal2.png　シワに加えて布地を表現\nBoots2_Normal3.png　シワ・布地に加えて縦セタ風の溝を表現\nBoots2_Normal4.png　布地表現はせずに、シワ・縦セタ風溝を表現\n\nノーマルマップは好みで使い分けてください。\n\nおまけ下着forキッシュ.pngは、\nキッシュちゃん素体を使用したアバター向けのおまけ透過画像です。\n素体テクスチャー(n_body)に合成して使用してください。\n","url":"https://booth.pm/ja/items/1121776","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/e9067cd7-09e7-438a-a716-24ff8190ff99/i/1121776/b2f14e9f-b51e-47e0-894e-13f7a2dc0767_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OAFznhasbIgo9nUAdhxUAOoTMMc93CvYiLD4lZbkeqo="></script>
+    nonce="RR5VQ82LRoFwD7/HJaO4+l0lnZmlMEnVDGcTEk/cA6c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1121776/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               262
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1121776/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               262
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
