--- a/VRChat/79/1121579.html
+++ b/VRChat/79/1121579.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dhg/WE64g2+JRdJFNmrcNYThbgxeACulW3CKrgQ1eVM="></script>
+    "g+Upot+wgxmlVoGsVfeV3DhINmRnqkjrszX4y4E77YI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バンダナ","description":"モデリング：Helio_ICNMY\n\n三角面　194\nマテリアル数 1\n\n\nお出かけのさいのちょっとしたアクセントや、オタ芸のおともにどうぞ。\nデフォルトで4種類×3色の模様バリエーションを取りそろえています。\n\n\n〇模様バリエーション\n・フラワー\n・トライバル風\n・ペイズリー風\n・ギンガムチェック\n\n〇色バリエーション\nレッド、ブルー、グリーン\n\n\n〇内容物\nモデルデータ(fbx）\nテクスチャデータ×12（png）\nノーマルマップデータ（png）\nUV展開図（png）\n","url":"https://booth.pm/ja/items/1121579","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/050eca5c-219c-4153-bbcb-49cb0490bfb5/i/1121579/2a8fa592-62a9-4f93-81c3-9912c8d82047_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dhg/WE64g2+JRdJFNmrcNYThbgxeACulW3CKrgQ1eVM="></script>
+    nonce="g+Upot+wgxmlVoGsVfeV3DhINmRnqkjrszX4y4E77YI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1121579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              93
+                              94
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1121579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              93
+                              94
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
