--- a/VRChat/06/1116606.html
+++ b/VRChat/06/1116606.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BS70urNa6TPFeooF2xwEG6CfMDFy0j6BwFbP5SvmvDY="></script>
+    "I0zwZndtZp3aQolofn00zaF8lXz116zyQtS10Sl8rjQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC/VRM/MMD向け3Dモデル「アンドレア」ver2.0","description":"鮫のお姉さんです！\n","url":"https://booth.pm/ja/items/1116606","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"900","highPrice":"1500"},"image":"https://booth.pximg.net/c/620x620/a396d0e8-451f-49ff-9a9d-89660f8ae6cd/i/1116606/9e24ba15-3cf2-47df-92b9-78dc7c0ffe8f_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BS70urNa6TPFeooF2xwEG6CfMDFy0j6BwFbP5SvmvDY="></script>
+    nonce="I0zwZndtZp3aQolofn00zaF8lXz116zyQtS10Sl8rjQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,6 +112,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,7 +157,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1116606/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               158
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1116606/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               158
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
